deploy/openshift/overlays/external-inference/patch-remove-mock.yaml
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-mock

---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: inference-mock
